--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,4 +1,4 @@
-.NavItems{
+.NavItems {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -17,7 +17,7 @@
 
 .nav-menu {
     display: grid;
-    grid-template-columns: repeats(6, auto);
+    grid-template-columns: repeat(6, auto); 
     grid-gap: 10px;
     list-style: none;
     align-items: center;
@@ -31,11 +31,12 @@
     padding: 0.7rem 1rem;
     white-space: nowrap;
 }
-.nav-links i{
+
+.nav-links i {
     padding-right: 10px;
 }
 
-.nav-links:hover{
+.nav-links:hover {
     background-color: orange;
     color: #fff;
     border-radius: 4px;
@@ -44,4 +45,39 @@
 
 .nav-links-mobile {
     display: none;
+}
+
+button {
+    padding: 0.5rem 1rem;
+    white-space: nowrap;
+    border-radius: 0.3rem;
+    font-size: 1rem;
+    font-weight: 600;
+    border: none;
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
+}
+
+button:hover {
+    background-color: brown;
+    color: white;
+}
+
+@media screen and (max-width: 850px){
+    .nav-menu {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        background:purple;
+        width: 100%;
+        height: auto;
+        position: absolute;
+        top: 0;
+        left: 0;
+        opacity: 1;
+        align-items: stretch;
+        padding: 80px 0 30px 0;
+        margin: 0;
+    }
+    
 }
