--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -80,4 +80,32 @@ button:hover {
         margin: 0;
     }
     
+    .nav-links {
+        display: block;
+        width: 100%;
+        font-size: 1.2rem;
+        padding: 2rem 0;
+    }
+    .nav-links:hover {
+        background: palevioletred;
+        transition: none;
+    }
+
+    button {
+        display: none;
+    }
+    .nav-links-mobile {
+        display: block;
+        text-align: center;
+        padding: 1.5rem;
+        margin: auto;
+        border-radius: 4px;
+        widows: 80%;
+        background: grey;
+        text-decoration: none;
+        color: blue;
+        font-size: 1.2rem;
+        font-weight: 700;
+        letter-spacing: 2rem;
+    }
 }
