--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,3 +1,6 @@
+
+
+
 .NavItems {
     display: flex;
     justify-content: space-between;
@@ -76,9 +79,9 @@ button:hover {
         height: auto;
         position: absolute;
         top: 0;
-        left: -100%;
+        left: 0;
         opacity: 0;
-        align-items: stretch;
+        /* align-items: stretch; */
         padding: 80px 0 30px 0;
         margin: 0;
         
@@ -110,7 +113,7 @@ button:hover {
         padding: 1.5rem;
         margin: auto;
         border-radius: 4px;
-        widows: 80%;
+        width: 80%;
         background: grey;
         text-decoration: none;
         color: blue;
