--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,6 +1,4 @@
 
-
-
 .NavItems {
     display: flex;
     justify-content: space-between;
@@ -66,6 +64,10 @@ button:hover {
     color: white;
 }
 
+.menu-icons {
+    display: none;
+}
+
 @media screen and (max-width: 850px){
     .NavItems {
         z-index: 99;
@@ -74,14 +76,14 @@ button:hover {
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
-        background:grey;
+        background:pink;
         width: 100%;
         height: auto;
         position: absolute;
         top: 0;
-        left: 0;
+        left: -100%;
         opacity: 0;
-        /* align-items: stretch; */
+        align-items: stretch;
         padding: 80px 0 30px 0;
         margin: 0;
         
@@ -116,9 +118,16 @@ button:hover {
         width: 80%;
         background: grey;
         text-decoration: none;
-        color: blue;
+        color: orangered;
         font-size: 1.2rem;
         font-weight: 700;
-        letter-spacing: 2rem;
+        letter-spacing: 2px;
+    }
+    .menu-icons {
+        display: block;
+    }
+    .menu-icons i {
+        font-size: 1.2rem;
+        color:brown;
     }
 }
