--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -6,8 +6,12 @@
     padding: 0 30px;
     box-shadow: 0 5px 15px 0 rgba(0, 0, 0, .25);
     width: 95%;
-    height: 88px;
+    height: 80px;
     border-radius: 13px;
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    transform: translate(-50%);
 }
 
 .navbar-logo {
@@ -125,6 +129,7 @@ button:hover {
     }
     .menu-icons {
         display: block;
+        cursor: pointer;
     }
     .menu-icons i {
         font-size: 1.2rem;
