--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -12,6 +12,7 @@
     top: 20px;
     left: 50%;
     transform: translate(-50%);
+    z-index: 9999;
 }
 
 .navbar-logo {
@@ -97,6 +98,7 @@ button:hover {
         left: 0;
         opacity: 1;
         z-index: -1;
+        transition: 0.3s ease-in-out;
     }
 
     .nav-links {
