--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -91,7 +91,8 @@ button:hover {
         align-items: stretch;
         padding: 80px 0 30px 0;
         margin: 0;
-        
+        transition: 0.3s ease-in-out;
+        border-radius: 13px;
     }
     
     .nav-menu.active {
