--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -1,14 +1,59 @@
 .hero {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh; 
+    width: 100%;
+    height: 100%;
+    position: position;
   }
   
-  .hero img {
-    max-width: 100%; 
-    max-height: 100%; 
-    display: block; 
-    margin: 0 auto;
-  }
-  
+img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+hero-text{
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+}
+hero-text h1{
+    font-size: 3rem;
+    font-weight: 800;
+    background: #fff;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+hero-text p{
+    font-size: 1.3rem;
+    font-weight: 800;
+    color: #fff;
+    padding: 0.5rem 0 2rem 0;  
+}
+.hero-text .show{
+    text-decoration: none;
+    background: orange;
+    padding: 1rem 2rem;
+    border-radius: 6px;
+    font-size: 1.1rem;
+    font-weight: bold;
+    letter-spacing: 2px;
+    color: grey;
+}
+@media screen and (max-width: 55px){
+    .hero-text h1 {
+        padding: 10px 20px;
+    }
+
+    .hero-text p1{
+        font-size: 1.1rem;
+        padding: 0 0 2rem 0;
+    }
+
+    .hero-text .show {
+        padding:6rem 1.1rem;
+        border-radius: 6px;
+        font-size: 1rem;
+
+    }
+}
