--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -3,6 +3,12 @@
     height: 100%;
     position: position;
   }
+
+  .hero-mid {
+    width: 100%;
+    height: 70vh;
+    position: relative;
+  }
   
 img {
     width: 100%;
