--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -13,7 +13,7 @@
     top: 20px;
     left: 50%;
     transform: translate(-50%);
-    /* z-index: 9999; */
+    z-index: 9999;
 }
 
 .navbar-logo {
@@ -77,7 +77,7 @@ button:hover {
 @media screen and (max-width: 850px){
     .NavItems {
         display: flex;
-        /* z-index: 99; */
+        z-index: 99;
     }
     .nav-menu {
         display: flex;
@@ -100,7 +100,7 @@ button:hover {
     .nav-menu.active {
         left: 0;
         opacity: 1;
-        /* z-index: -1; */
+        z-index: -1;
         transition: 0.3s ease-in-out;
     }
 
