made sure that when you click on the navbars the url changes to the clicked navbar name

--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -42,7 +42,7 @@ img {
 }
 .hero-text .show{
     text-decoration: none;
-    background: orange;
+    background: blue;
     padding: 1rem 2rem;
     border-radius: 6px;
     font-size: 1.1rem;
