--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
-  background: white;
+  background: rgb(194, 172, 194);
 
 }
 
