--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -44,7 +44,7 @@
 }
 
 .nav-links:hover {
-    background-color: orange;
+    background-color: rgb(120, 120, 184);
     color: #fff;
     border-radius: 4px;
     transition: all 0.2s ease-in-out;
@@ -66,7 +66,7 @@ button {
 }
 
 button:hover {
-    background-color: brown;
+    background-color: gray;
     color: white;
 }
 
