--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,6 +1,6 @@
 
 .NavItems {
-    background-color: blueviolet;
+    background: gray;
     display: flex;
     justify-content: space-between;
     align-items: center;
