--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,6 +1,6 @@
 
 .NavItems {
-    background: gray;
+    background-color: gray;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -16,9 +16,9 @@
     z-index: 9999;
 }
 
-.navbar-logo {
-    color: purple;
-    font-size: 2rem;
+.logo {
+    width: 50px;
+    height: auto;
     cursor: pointer;
 }
 
@@ -44,11 +44,7 @@
 }
 
 .nav-links:hover {
-<<<<<<< HEAD
     background-color: rgb(120, 120, 184);
-=======
-    background-color: rgb(126, 126, 209)
->>>>>>> 795fbdcfc60d8c26a129a7a23d438e98c448293d
     color: #fff;
     border-radius: 4px;
     transition: all 0.2s ease-in-out;
