made the nav colour to be purple

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -84,7 +84,7 @@ button:hover {
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
-        background:pink;
+        background:purple;
         width: 100%;
         height: auto;
         position: absolute;
