--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,14 @@
 
 *{
   margin: 0;
-  padding: 0;
+  /* padding: 0; */
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
-  background: rgb(194, 172, 194);
+  background: darkblue;
+  /* border: 1rem solid grey; */
+  padding: 1px;
+  color: white;
+  
 
 }
 
