--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -2,6 +2,9 @@
     width: 100%;
     height: 100%;
     position: absolute;
+    border: 1rem solid white;
+    border-radius: 13px;
+    /* background-color: rgb(77, 5, 77); */
   }
 
   .hero-mid {
@@ -11,7 +14,9 @@
   }
 
   .hero-text h1 {
-    padding-top: 4rem !important;
+    /* padding-top: 4rem !important; */
+    color:brown;
+    background-color: aqua;
   }
   
 img {
@@ -25,13 +30,15 @@ img {
     left: 50%;
     transform: translate(-50%, -50%);
     width: 100%;
+    background-color: chocolate;
 }
 .hero-text h1{
     font-size: 3rem;
     font-weight: 800;
-    background: #fff;
+    background: green;
+    color: grey;
     /* -webkit-background-clip: text; */
-    -webkit-text-fill-color: transparent;
+    /* -webkit-text-fill-color: transparent; */
 }
 
 .hero-text p{
@@ -62,6 +69,7 @@ img {
     .hero-text p1{
         font-size: 1.1rem;
         padding: 0 0 2rem 0;
+        /* color: chartreuse; */
     }
 
     .hero-text .show {
