--- a/src/components/ContactForm.css
+++ b/src/components/ContactForm.css
@@ -29,3 +29,17 @@
 .form-container button{
     display: inline;
 }
+
+@media screen and(max-width:850px){
+    .form-container{
+        margin: 4rem 6rem;
+        color: green;
+    }
+
+    .form-container form{
+        padding-top: 2rem;
+        width: 90%;
+        margin: auto;
+    }
+    
+}
