--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -21,3 +21,21 @@
 .top i:hover{
     color: #363636;
 }
+
+.bottom{
+    padding-top: 2rem;
+    text-align: start;
+    display:flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.bottom div{
+    display: flex;
+    flex-direction: column;
+}
+
+.bottom h4{
+    font-size: 1.3rem;
+    padding: 1rem 0 .8rem 0;
+}
