--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -39,3 +39,22 @@
     font-size: 1.3rem;
     padding: 1rem 0 .8rem 0;
 }
+
+.bottom a{
+    text-decoration: none;
+    color: #fafa;
+    padding-bottom: 0.4rem;
+    font-size: 1.1rem;
+    /* border: orangered; */
+}
+@media screen and (max-width: 850px){
+    .footer{
+        padding: 4rem 2rem;
+    }
+    .footer i{
+        margin: 1rem 1rem 0 0;
+    }
+    .bottom div{
+        width: 50%;
+    }
+}
