--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,19 +1,19 @@
 
 .NavItems {
-    background-color: purple;
+    /* background-color: purple; */
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 30px;
-    box-shadow: 0 5px 15px 0 rgba(0, 0, 0, .25);
+    /* box-shadow: 0 5px 15px 0 rgba(0, 0, 0, .25); */
     width: 95%;
     height: 80px;
     border-radius: 13px;
     position: fixed;
     top: 20px;
-    left: 50%;
-    transform: translate(-50%);
-    z-index: 9999;
+    /* left: 50%;
+    transform: translate(-50%); */
+    z-index: 999;
 }
 
 .logo {
@@ -26,15 +26,19 @@
 .nav-menu {
     display: grid;
     grid-template-columns: repeat(6, auto); 
-    grid-gap: 10px;
+    /* grid-gap: 10px; */
     list-style: none;
-    background-color: aqua;
-    align-items: center;
+    background-color: purple;
+    /* align-items: center; */
     width: 70%;
     border-radius: 13px;
 }
 
 .nav-links {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
     text-decoration: none;
     color: grey;
     font-size: 1.2rem;
