removed the background color

--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,9 @@
 *{
   margin: 0;
   /* padding: 0; */
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   font-family: 'Poppins', sans-serif;
-  background: darkblue;
+  /* background: darkblue; */
   /* border: 1rem solid grey; */
   padding: 1px;
   color: white;
