--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   /* padding: 0; */
   /* box-sizing: border-box; */
   font-family: 'Poppins', sans-serif;
-  /* background: darkblue; */
+  background: purple;
   /* border: 1rem solid grey; */
   padding: 1px;
   color: white;
