placed the blue background color to be blue as per the figma design

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,6 +1,6 @@
 
 .NavItems {
-    background-color: purple;
+    background-color: blue;
     display: flex;
     justify-content: space-between;
     align-items: center;
