--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -74,8 +74,8 @@ button {
     border: none;
     cursor: pointer;
     transition: 0.2s ease-in-out;
-    color: grey;
-    background-color: aqua;
+    color: #fff;
+    background-color: #135072;
 }
 
 button:hover {
