placed a blue background color on the contact page and border radius on it

--- a/src/components/ContactForm.css
+++ b/src/components/ContactForm.css
@@ -1,6 +1,9 @@
 .form-container{
     margin: 0;
     color: green;
+    /* border: #fff solid 1rem; */
+    border-radius: 13px;
+    background: #135072;
 }
 
 .form-container form{
