placed the logo image on the footer section on the contact page

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   /* padding: 0; */
   /* box-sizing: border-box; */
   font-family: 'Poppins', sans-serif;
-  background: #301934;
+  /* background: #301934; */
   /* border: 1rem solid grey; */
   padding: 1px;
   color: white;
