--- a/src/components/ContactForm.css
+++ b/src/components/ContactForm.css
@@ -4,6 +4,7 @@
     /* border: #fff solid 1rem; */
     border-radius: 13px;
     background: #135072;
+    padding: 2rem;
 }
 
 .form-container form{
