made the nav menu to be purple in color as per the figma design

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -28,7 +28,7 @@
     grid-template-columns: repeat(6, auto); 
     grid-gap: 10px;
     list-style: none;
-    background-color: aqua;
+    background-color: #301934;
     align-items: center;
     width: 70%;
     border-radius: 13px;
