--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -36,7 +36,7 @@
 
 .nav-links {
     text-decoration: none;
-    color: grey;
+    color: #fff;
     font-size: 1.2rem;
     font-weight: 600;
     padding: 0.7rem 1rem;
@@ -45,6 +45,7 @@
 
 .nav-links i {
     padding-right: 10px;
+    color: grey;
 }
 
 .nav-links:hover {
